--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js"
+    "start":"node app.js",
+    "dev":"nodemon app.js"
   },
   "dependencies":{
+  	
   	"body-parser": "^1.20.1",
     	"dotenv": "^16.6.1",
     	"ejs": "^3.1.9",
