--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js",
-    "dev":"nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "dependencies":{
-  	
-  	"body-parser": "^1.20.1",
-    	"dotenv": "^16.6.1",
-    	"ejs": "^3.1.9",
-    	"express": "^4.18.2",
-    	"mongodb": "^6.3.0",
-    	"express-session": "^1.17.3",
-    	"mongoose": "^7.0.0"
-   }
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^7.0.0"
+  }
 }
