--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^7.0.0",
     "oauth": "^0.10.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
     "multer":"*"
   }
 }
