--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "method-override": "*",
     "mongodb": "^6.3.0",
     "mongoose": "^7.0.0",
-    "oauth": "^0.10.2",
-    "cors": "^2.8.5",
-    "multer":"*",
-    "method-override":"*"
+    "multer": "*",
+    "oauth": "^0.10.2"
   }
 }
