--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DOMAIN=http://localhost:8080
+DOMAIN='http://localhost:8080'
+MONGO_URI='mongodb://atlas-sql-68ca28b6b5ef9576a142b274-bwo3zy.a.query.mongodb.net/healthypal?ssl=true&authSource=admin'
